2001-02-23 21:40 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * bug fixed, reported by Maurilio Longo

2001-02-23 21:40 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * building of indexes optimized
2001-02-13 hh:mm GMT+1 Jose Gimenez (JFG) <jfgimenez@wanadoo.es>
  * source/rtl/filesys.c
    * hb_fsOpen
    * hb_fsCreate
    * hb_fsClose
    * hb_fsRead
    * hb_fsWrite
    * hb_fsReadLarge
    * hb_fsWriteLarge
    * hb_fsSeek
    * hb_fsTell
    + added logic to use Win32 API calls
  
  * tests/files.prg
    * tested up to 20,000 DBF files

2001-02-23 19:35 UTC+0300 Alex Shashkov <shashkov@ostu.ru>
   * harbour/source/rtl/filesys.c
   * harbour/source/rtl/math.c
   * harbour/source/vm/item.c
     ! Fixed support for Watcom C 11.0

2001-02-23 08:25 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Added support for DO <>.prg

   * contrib/dot/rp_dot.ch
      + Added #command DO <>.prg (no support for WITH yet)

2001-02-22 22:25 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Started support for interpreting prg files.
   * contrib/dot/rp_dot.ch
     + Added #command for stealing END

   /* PP can alreay "Run" simple prgs :-). It actually support most Clipper commands.
      It does *not* support LOCAL/STATIC/PRIVATE/PUBLIC, but any refference to a variable will create it as PRIVATE.
      It does not (yet) support creation of FUNCTIONs/PROCEDUREs but will execute any built-in, or linked, prodecure/function.
      It does not (yet) support WHILE and FOR loops.

      It can execute code like this:

      //------------------------------//
      CLS

      Alert( "Testinf PP as Interpreter... " )

      USE test
      IF ! File( "test" + IndexExt() )
   	INDEX on FIELD->First TO First
      ELSE
   	SET INDEX TO First
      ENDIF

      GO TOP

      cName := FIELD->First + FIELD->Last
